@@ -156,7 +156,7 @@ class DOMElement:
             comment.parent = self
             comment.is_preceding_comment = True
 
-    # Add an attached comment (if present) to the line given, respecting the comment alignment
+    # Add an attached comment (if present) to the output line text given, respecting the comment alignment
     def add_attached_comment_to_line(self, line):
         if self.attached_comment is not None:
             padding = self.attached_comment.alignment - len(line)
@@ -857,8 +857,7 @@ class DOMBlankLines(DOMElement):
     def write_to_c(self, file, indent=0, context=WriteContext()):
         self.write_preceding_comments(file, indent, context)
         if self.num_blank_lines > 0:
-            newline_str = collapse_tokens_to_string_with_whitespace(self.tokens)
-            for i in range(0, len(newline_str)):
+            for i in range(0, self.num_blank_lines):
                 write_c_line(file, indent, "")
 
     def __str__(self):
@@ -1340,6 +1339,8 @@ class DOMFunctionDeclaration(DOMElement):
         #                             (set when functions are flattened)
         self.is_default_argument_helper = False  # Set if this is an autogenerated function with arguments defaulted
         #                                         (see mod_generate_default_argument_functions)
+        self.is_manual_helper = False  # Set if this is a manually-added helper function (see
+        # mod_add_helper_functions for more details)
 
     # Parse tokens from the token stream given
     @staticmethod
@@ -1989,6 +1990,8 @@ class DOMComment(DOMElement):
     def parse(context, stream):
         dom_element = DOMComment()
         tok = stream.get_token_of_type(['LINE_COMMENT', 'BLOCK_COMMENT'])
+        if tok is None:
+            return None
         dom_element.tokens = [tok]
         dom_element.comment_text = tok.value
         # print("Comment: " + dom_element.commentText)
