@@ -37,3 +37,24 @@ namespace ImGui
 #endif
 }
 
+// Manual helpers
+// These implement functionality that isn't in the original C++ API, but is useful to callers from other languages
+
+CIMGUI_API void cimgui::ImVector_Construct(void* vector)
+{
+    // All ImVector classes are the same size, so it doesn't matter which we use for sizeof() here
+    memset(vector, 0, sizeof(::ImVector<int>));
+}
+
+CIMGUI_API void cimgui::ImVector_Destruct(void* vector)
+{
+    // As with ImVector_construct(), it doesn't matter what the type parameter is here as we just want to get the
+    // pointer and free it (without calling destructors or anything similar)
+    ::ImVector<int>* real_vector = reinterpret_cast<::ImVector<int>*>(vector);
+    if (real_vector->Data)
+    {
+        IM_FREE(real_vector->Data);
+    }
+}
+
+
