@@ -22,6 +22,20 @@ def create_tokens_for_type(text):
     return code_dom.DOMType.parse(context, stream, allow_function_pointer=True).tokens
 
 
+# Create a function declaration DOM element from a string
+def create_function_declaration(text):
+    stream = c_lexer.tokenize(text)
+    context = code_dom.ParseContext()
+    element = code_dom.DOMFunctionDeclaration.parse(context, stream)
+    # There may be a comment following the declaration, so check for it and attach if there is
+    attached_comment = code_dom.DOMComment.parse(context, stream)
+    if attached_comment is not None:
+        element.attached_comment = attached_comment
+        element.attached_comment.is_attached_comment = True
+        element.attached_comment.parent = element
+    return element
+
+
 # Get all #if/#ifdef/etc blocks an element is contained in as a list in order from the outermost
 def get_preprocessor_conditionals(element):
     result = []
